@@ -1,4 +1,6 @@
-﻿[B]1.0.5[/B]
+﻿[B]1.0.6[/B]
+- Sorozat bugfix
+[B]1.0.5[/B]
 - BugFix
 [B]1.0.4[/B]
 - Keresés lapozásának (Következő oldal) javítása
